@@ -35,6 +35,7 @@
     * 1013 Sort host names naturally, e.g. foobar11 comes after foobar2...
     * 1033 New Mutisite filter for the number of services a host has...
     * 0949 quicksearch: now able to search for multiple hosts at once...
+    * 1052 SEC: index start URL can not be used to redirect to absolute URLs anymore...
     * 0945 FIX: Sidebar snapin "Problem hosts": Now excludes hosts and services in downtime
     * 1036 FIX: doc/treasures/downtime: fix --url option, better error output
 
